# make-requests-fast

./: .gitignore  README.md  pyproject.toml  requirements.txt
make_requests_fast/: cli.py
make_requests_fast/configuration/: config.ini  config.py
make_requests_fast/requestors/: AiohttpRequestor.py  BufferedChunkedThreadPoolRequestor.py  ChunkedProcessPoolRequestor.py  ChunkedThreadPoolRequestor.py  DaskStreamzRequestor.py  MultiprocessThreadPoolRequestor.py  SequentialRequestor.py  __init__.py
make_requests_fast/resources/: myspecies_urls.csv  old_urls.csv  single_test_url.csv  test_urls.csv  urls.csv
make_requests_fast/utils/: ListReader.py
tests/: test_make_requests_fast.py
